--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <!-- Select option -->
-<span i18n>
-  Gender: {genderCode, select, 0 {male} 1 {female} other {other answer}}
-</span>
+<span i18n> Gender: {genderCode, select, 0 {male} 1 {female}} </span>
 <button (click)="male()">M</button>
 <button (click)="female()">F</button>
-<button (click)="other()">O</button>
 
 <br />
